perf: GitHub Actionsの依存関係インストール時間を最適化
- node_modulesキャッシュを追加
- npm ciに--prefer-offline --no-auditフラグを追加
- puppeteer依存関係を削除
- 不要なE2Eテストスクリプトを削除

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,14 @@ jobs:
           cache: 'npm'
           cache-dependency-path: extension/package-lock.json
 
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: extension/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('extension/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Extract version from tag
         id: version
         run: |
@@ -49,7 +57,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: extension
-        run: npm ci
+        run: npm ci --prefer-offline --no-audit
 
       - name: Commit version updates
         run: |
