--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,17 @@ jobs:
           cache: 'npm'
           cache-dependency-path: extension/package-lock.json
 
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: extension/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('extension/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
         working-directory: extension
-        run: npm ci
+        run: npm ci --prefer-offline --no-audit
 
       - name: Run linting
         working-directory: extension
