--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -12,8 +12,12 @@
   ],
   "content_scripts": [
     {
-      "matches": ["https://jp.mercari.com/*"],
-      "js": ["src/content.js"]
+      "matches": [
+        "https://jp.mercari.com/*"
+      ],
+      "js": [
+        "src/content.js"
+      ]
     }
   ],
   "action": {
