--- a/extension/package.json
+++ b/extension/package.json
@@ -15,6 +15,8 @@
   "scripts": {
     "test": "jest",
     "test:unit": "jest tests/unit",
+    "test:e2e": "jest tests/e2e",
+    "test:payment": "jest tests/e2e/payment.e2e.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint popup/ src/ tests/",
@@ -31,7 +33,8 @@
     "eslint": "^8.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^30.0.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "puppeteer": "^24.18.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -39,7 +42,8 @@
       "<rootDir>/tests/setup.js"
     ],
     "testMatch": [
-      "**/tests/**/*.test.js"
+      "**/tests/**/*.test.js",
+      "**/tests/**/*.e2e.js"
     ],
     "collectCoverageFrom": [
       "popup/**/*.js",
